--- a/views/macros/buttons.njk
+++ b/views/macros/buttons.njk
@@ -1,7 +1,7 @@
 {% macro formButtons(submitButtonText = 'Next', cancelUrl = '/clear') %}
     <div class="buttons">
         <div class="buttons--left next-button">
-            <button class="py-3 px-4 border shadow" type="submit">{{ __(submitButtonText) }}</button>
+            <button class="py-3 px-4 border shadow" data-cy="next" type="submit">{{ __(submitButtonText) }}</button>
         </div>
         <div class="buttons--right"><a class="py-3 px-4 button-link transparent full-width" href="{{ cancelUrl }}"><img src="/img/times-circle.svg" aria-hidden="true" /><span>{{ __('start_over') }}</span></a></div>
     </div>
