--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,3 +1,5 @@
-<a href="{{ lastPage }}" aria-label="{{__('button.back')}}" class="back-button">
-  <img src="/img/arrow-circle-left.svg"/><span>{{__('button.back')}}</span>
-</a>
+<div>
+  <a href="{{ lastPage }}" aria-label="{{__('button.back')}}" class="back-button" referrerpolicy="origin">
+    <img src="/img/arrow-circle-left.svg" aria-hidden="true" /><span>{{__('button.back')}}</span>
+  </a>
+</div>
