separate getLastPage out into a data helper put it in only one page for now to see if it works as intended

--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,5 +1,5 @@
 <div>
-  <a href="{{ lastPage }}" aria-label="{{__('button.back')}}" class="back-button" referrerpolicy="origin">
+  <a href="{{ lastPage }}" aria-label="{{__('button.back')}}" class="back-button">
     <img src="/img/arrow-circle-left.svg" aria-hidden="true" /><span>{{__('button.back')}}</span>
   </a>
 </div>
