--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -53,11 +53,6 @@ form button {
   width: 100%;
 }
 
-.next-button {
-  width: 100%;
-  max-width: 250px;
-}
-
 .start-button {
   width: 100%;
   max-width: 433px;
@@ -70,13 +65,22 @@ form button {
 a.button-link {
   @extend %button-styles;
 
+  img, span {
+    display: inline-block;
+  }
+
+  span {
+    margin-left: $space-xs;
+    text-decoration: inherit;
+  }
+
   &.full-width {
     display: inline-block;
     width: 100%;
   }
 
   &.transparent {
-    color: $color-green-dark;
+    color: $color-blue-dark;
     background-color: transparent;
     border-color: transparent;
     text-decoration: underline;
