make svg colours match link colour left-align x button in start over on mobile add a bit more margin

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -180,6 +180,24 @@ form {
       flex: 1;
     }
 
+    .buttons--right {
+      margin-top: $space-sm;
+
+      .button-link {
+        display: flex;
+        justify-content: center;
+
+        img, span {
+          margin-right: auto;
+        }
+
+        span {
+          //width of the icon to truly center the text
+          margin-left: -22px;
+        }
+      }
+    }
+
     @include sm {
       flex-direction: row;
 
@@ -188,6 +206,15 @@ form {
       }
       .buttons--right {
         margin-left: $space-xs;
+        margin-top: 0;
+        .button-link img, 
+        .button-link span {
+          margin-right: 0;
+        }
+
+        .button-link span {
+          margin-left: $space-sm;
+        }
       }
     }
   }
