Move back link icon up 2px on mobile
Keeps it centred when the text shrinks.

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -101,4 +101,15 @@ a.back-button {
     margin-left: $space-xs;
     text-decoration: inherit;
   }
+
+  // because the text gets smaller, we want to move the image up to keep it centred
+  img {
+    margin-top: -2px;
+  }
+
+  @include sm {
+    img {
+      margin-top: 0;
+    }
+  }
 }
