update content on question m3a

--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -10,9 +10,8 @@
             {{ radioButtons(
                 'gross_income',
                 [
-                    { value: 'under3k', text:__('gross_income.1')},
-                    { value: '3k-5k', text:__('gross_income.2')},
-                    { value: '5k+', text:__('gross_income.3')}
+                    { value: 'under4999', text:__('gross_income.1')},
+                    { value: '5k+', text:__('gross_income.2')}
                 ],
                 data.gross_income,
                 __('form.gross_income'),
