--- a/routes/question-mortgage-payments/question-mortgage-payments.njk
+++ b/routes/question-mortgage-payments/question-mortgage-payments.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    
+    <h1> {{ __("mortgage_payments.title") }} </h1>
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
