--- a/routes/question-ccb/question-ccb.njk
+++ b/routes/question-ccb/question-ccb.njk
@@ -4,6 +4,7 @@
 
     
     <div>
+        <h1> {{ __("ccb.title") }} </h1>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
