--- a/assets/scss/components/_banners.scss
+++ b/assets/scss/components/_banners.scss
@@ -57,4 +57,15 @@
             background-position: center;
         }
     }
+
+    &--red {
+        background: $color-red-light;
+        border-left: 5px solid $color-red;
+
+        padding-left: $space-md;
+
+        @include md {
+            padding-left: $space-lg;
+        }
+    }
 }
