--- a/views/macros/banner.njk
+++ b/views/macros/banner.njk
@@ -1,6 +1,8 @@
 {% macro banner(variant, block) %}
     <div class="banner banner--{{ variant }}">
-        <span class="banner__icon banner--{{ variant }}__icon" aria-hidden="true">i</span>
+        {% if variant !== 'red' %}
+            <span class="banner__icon banner--{{ variant }}__icon" aria-hidden="true">i</span>
+        {% endif %}
         {% if block %}
             {{ block | safe}}
         {% else %}
