change the back button to run on javascript instead it'll more consistently work better TODO: hide if javascript not enabled

--- a/views/_includes/script.njk
+++ b/views/_includes/script.njk
@@ -9,6 +9,13 @@
             }
         })
     }
+
+    document.addEventListener('DOMContentLoaded', function () {
+        document.getElementById('backButton').addEventListener('click', function() {
+            window.history.go(-1);
+        }, true)
+    }, false);
+
 </script>
 <script>
     if (typeof Promise !== "function" && document.querySelector('details') !== null) 
