--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -84,7 +84,7 @@ a.button-link {
   }
 }
 
-a.back-button {
+button.back-button {
   margin-bottom: $space-md;
   //this so that if the button doesn't display, it doesn't affect the necessary margin for the header
   margin-top: -$space-lg;
@@ -95,6 +95,6 @@ a.back-button {
 
   span {
     margin-left: $space-xs;
-    text-decoration: inherit;
+    text-decoration: underline;
   }
 }
