--- a/views/base.njk
+++ b/views/base.njk
@@ -33,7 +33,7 @@
                 {% include "_includes/fip.njk" %}
             </header>
             <main id="content">
-                {% if lastPage %}
+                {% if not path.includes('start') and not path.includes('debut') %}
                     {% include "_includes/back-link.njk" %}
                 {% endif %}
                 {% if errors %}
