--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -4,9 +4,10 @@
 {% block content %}
 
     <h1>{{ __("results.title") }}</h1>
-    <div>
-        {{ banner('red', '<p>' + __('results.banner') + '</p>') }}
-    </div>
+
+    {% if not data.lost_job %}
+        <div>{{ banner('red', '<p>' + __('results.banner') + '</p>') }}</div>
+    {% endif %}
 
     {% if benefits.length > 0 %}
     <p>
