instead of passing a prop to display button pass one to hide the button instead, as we mostly want to opt OUT of the button instead of in add noscript css to hide the back button when javascript is disabled

--- a/views/base.njk
+++ b/views/base.njk
@@ -33,7 +33,7 @@
                 {% include "_includes/fip.njk" %}
             </header>
             <main id="content">
-                {% if not path.includes('start') and not path.includes('debut') %}
+                {% if not hideBackButton %}
                     {% include "_includes/back-link.njk" %}
                 {% endif %}
                 {% if errors %}
