--- a/views/benefits/ei_sickness_cerb.njk
+++ b/views/benefits/ei_sickness_cerb.njk
@@ -1,12 +1,13 @@
 {{ benefitResult( 
     "ei_sickness_cerb",
     __("ei_sickness_cerb.header"),
-    __("ei_sickness_and_cerb.preamble"),
+    __("ei_sickness_cerb.preamble"),
     {
-        text: __("ei_sickness_and_cerb.linktext"),
+        text: __("ei_sickness_cerb.linktext"),
         link: "#"
     },
     [
-        __("ei_sickness_and_cerb.box1")
+        __("ei_sickness_cerb.box1"),
+        __("ei_sickness_cerb.box2")
     ]
 )}}
