update english content for start page

--- a/assets/scss/components/_details.scss
+++ b/assets/scss/components/_details.scss
@@ -1,6 +1,7 @@
 details {
   margin-bottom: $space-lg;
   list-style-type: none;
+  font-size: 0.875em;
 
   summary {
     color: $color-blue-dark;
