--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -88,11 +88,13 @@ a.button-link {
   }
 }
 
-button.back-button {
+.back-button-container {
   margin-bottom: $space-md;
   //this so that if the button doesn't display, it doesn't affect the necessary margin for the header
   margin-top: -$space-lg;
+}
 
+button.back-button {
   img, span {
     display: inline-block;
   }
