--- a/routes/question-lost-job/question-lost-job.njk
+++ b/routes/question-lost-job/question-lost-job.njk
@@ -4,6 +4,7 @@
 
     
     <div>
+        <h1>{{__('lost_job.title')}}</h1>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
