--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -14,7 +14,7 @@
 
     <div>
         <details>
-            <summary>{{ __('start.details.summary') | safe }}</summary>
+            <summary><span>{{ __('start.details.summary') | safe }}</span></summary>
             <p>{{ __('start.details.p.1') | safe }}</p>
         </details>
     </div>
