--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -4,14 +4,19 @@
 
     
     <div>
+        <h1>{{__('some_income.title')}}</h1>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
             {{ radioButtons('some_income',
                 [
                     { value: 'hours-reduced', text:__('your_situation.some_income.1')},
+
                     { value: 'employed-lost-a-job', text:__('your_situation.some_income.3')},
-                    { value: 'retired', text:__('your_situation.some_income.2')}
+
+                    { value: 'retired', text:__('your_situation.some_income.2')},
+
+                    { value: 'quarantine', text:__('your_situation.some_income.4')}
                 ],
                 data.your_situation.some_income,
                 __('form.your_situation.some_income'),
