Add missing titles
Kept them outside of the div so that they will be full-width,
which seems to be the Canada.ca expectation.

--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    
+    <h1>{{__('gross_income.title')}}</h1>
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
