--- a/routes/question-rrif/question-rrif.njk
+++ b/routes/question-rrif/question-rrif.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    
+    <h1>{{__('rrif.title')}}</h1>
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
