Put form data back into the form
On a couple of pages, our form data wasn't being returned to the
form itself, because the wrong "data" was being passed into the
form macro.

Seems good on the other pages now.

--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -13,7 +13,7 @@
                     { value: 'employed-lost-a-job', text:__('your_situation.some_income.3')},
                     { value: 'retired', text:__('your_situation.some_income.2')}
                 ],
-                data.your_situation.some_income,
+                data.some_income,
                 __('form.your_situation.some_income'),
                 errors,
                 { required: true })
