--- a/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
+++ b/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
@@ -13,7 +13,7 @@
                     { value: 'paid-leave', text:__('your_situation.unchanged_income.2')},
                     { value: 'retired', text:__('your_situation.unchanged_income.3')}
                 ],
-                data.your_situation.unchanged_income,
+                data.unchanged_income,
                 __('form.your_situation.unchanged_income'),
                 errors,
                 { required: true })
