Add space to the bottom of the back button
We want it visually separated from the question title and answers,
which are conceptually all one unit.

The back button should appear as a distict element.

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -89,9 +89,13 @@ a.button-link {
 }
 
 .back-button-container {
-  margin-bottom: $space-md;
+  margin-bottom: $space-lg;
   //this so that if the button doesn't display, it doesn't affect the necessary margin for the header
   margin-top: -$space-lg;
+
+  @include sm {
+    margin-bottom: $space-xl;
+  }
 }
 
 button.back-button {
