--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <h1>{{ __("results.title") }}</h1>
+    <h1>{{ __("results.title", benefits.length) }}</h1>
 
     {% if not data.lost_job %}
         <div>{{ banner('red', '<p>' + __('results.banner') + '</p>') }}</div>
