Add links to benefits on the results page
Also made the button a 'target="_blank"' link because we want them
to open in new pages.

--- a/views/benefits/ccb_payment.njk
+++ b/views/benefits/ccb_payment.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "ccb_payment",
     __("ccb_payment.header"),
     __("ccb_payment.preamble"),
     {
         text: __("ccb_payment.linktext"),
-        link: "#"
+        link: __("ccb_payment.link")
     },
     [
         __("ccb_payment.box1"),
