--- a/views/benefits/cerb.njk
+++ b/views/benefits/cerb.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "cerb",
     __("cerb.header"),
     __("cerb.preamble"),
     {
         text: __("cerb.linktext"),
-        link: "#"
+        link: __("cerb.link")
     },
     [
         __("cerb.box1"),
