--- a/views/benefits/ei_regular.njk
+++ b/views/benefits/ei_regular.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "ei_regular",
     __("ei_regular.header"),
     __("ei_regular.preamble"),
     {
         text: __("ei_regular.linktext"),
-        link: "#"
+        link: __("ei_regular.link")
     },
     [
         __("ei_regular.box1")
