--- a/views/benefits/ei_sickness_cerb.njk
+++ b/views/benefits/ei_sickness_cerb.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "ei_sickness_cerb",
     __("ei_sickness_cerb.header"),
     __("ei_sickness_cerb.preamble"),
     {
         text: __("ei_sickness_cerb.linktext"),
-        link: "#"
+        link: __("ei_sickness_cerb.link")
     },
     [
         __("ei_sickness_cerb.box1"),
