--- a/views/benefits/ei_workshare.njk
+++ b/views/benefits/ei_workshare.njk
@@ -1,11 +1,11 @@
 
-{{ benefitResult( 
+{{ benefitResult(
     "ei_workshare",
     __("ei_workshare.header"),
     __("ei_workshare.preamble"),
     {
         text: __("ei_workshare.linktext"),
-        link: "#"
+        link: __("ei_workshare.link")
     },
     [
         __("ei_workshare.box1"),
