--- a/views/benefits/mortgage_deferral.njk
+++ b/views/benefits/mortgage_deferral.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "mortgage_deferral",
     __("mortgage_deferral.header"),
     __("mortgage_deferral.preamble"),
     {
         text: __("mortgage_deferral.linktext"),
-        link: "#"
+        link: __("mortgage_deferral.link")
     },
     [
         __("mortgage_deferral.box1")
