--- a/views/benefits/rent_help.njk
+++ b/views/benefits/rent_help.njk
@@ -1,9 +1,9 @@
-{{ benefitResult( 
+{{ benefitResult(
     "rent_help",
     __("rent_help.header"),
     __("rent_help.preamble"),
     {
         text: __("rent_help.linktext"),
-        link: "#"
+        link: __("rent_help.link")
     }
 )}}
