--- a/views/benefits/rrif.njk
+++ b/views/benefits/rrif.njk
@@ -1,9 +1,9 @@
-{{ benefitResult( 
+{{ benefitResult(
     "rrif",
     __("rrif.header"),
     __("rrif.preamble"),
     {
         text: __("rrif.linktext"),
-        link: "#"
+        link: __("rrif.link")
     }
 )}}
