--- a/views/benefits/ei_regular_cerb.njk
+++ b/views/benefits/ei_regular_cerb.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "ei_regular_cerb",
     __("ei_regular_cerb.header"),
     __("ei_regular_and_cerb.preamble"),
     {
         text: __("ei_regular_and_cerb.linktext"),
-        link: "#"
+        link: __("ei_regular_and_cerb.link")
     },
     [
         __("ei_regular_and_cerb.box1")
