--- a/views/benefits/gst_credit.njk
+++ b/views/benefits/gst_credit.njk
@@ -1,10 +1,10 @@
-{{ benefitResult( 
+{{ benefitResult(
     "gst_credit",
     __("gst_credit.header"),
     __("gst_credit.preamble"),
     {
         text: __("gst_credit.linktext"),
-        link: "#"
+        link: __("gst_credit.link")
     },
     [
         __("gst_credit.box1"),
