add no results at all

--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -6,6 +6,9 @@
     {% if no_cerb %}
         <h1>{{ __("results_title_no_cerb") }}</h1>
         <p>{{ __("results.no_cerb.preamble") }}</p>
+    {% else if no_results %}
+        <h1>{{ __("results_title_no_results") }}</h1>
+        <p>{{ __("results.no_results.preamble") }}</p>
     {% else %}
         <h1>{{ __n("results_title", benefits.length) }}</h1>
     {% endif %}
