--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -6,7 +6,7 @@
     {% if no_cerb %}
         <h1>{{ __("results_title_no_cerb") }}</h1>
         <p>{{ __("results.no_cerb.preamble") }}</p>
-    {% else if no_results %}
+    {% elif no_results %}
         <h1>{{ __("results_title_no_results") }}</h1>
         <p>{{ __("results.no_results.preamble") }}</p>
     {% else %}
