--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -12,7 +12,7 @@
                     { value: 'lost-job-employer-closed', text:__('your_situation.no_income.1')},
                     { value: 'self-employed-closed', text:__('your_situation.no_income.2')},
                     { value: 'unpaid-leave-to-care', text:__('your_situation.no_income.3')},
-                    { value: 'sick-or-quarantine', text:__('your_situation.no_income.7')},
+                    { value: 'sick-or-quarantined', text:__('your_situation.no_income.7')},
                     { value: 'parental-recently-cant-return', text:__('your_situation.no_income.4')},
                     { value: 'ei-recently-claim-ended', text:__('your_situation.no_income.5')},
                     { value: 'unsafe-work-conditions', text:__('your_situation.no_income.6')}
