Revert "Feature/q 2 content"

--- a/routes/question-your-situation-some-income/question-your-situation-some-income.njk
+++ b/routes/question-your-situation-some-income/question-your-situation-some-income.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>{{__('some_income.title')}}</h1>
+    
     <div>
         <form method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
@@ -10,12 +10,8 @@
             {{ radioButtons('some_income',
                 [
                     { value: 'hours-reduced', text:__('your_situation.some_income.1')},
-
                     { value: 'employed-lost-a-job', text:__('your_situation.some_income.3')},
-
-                    { value: 'retired', text:__('your_situation.some_income.2')},
-
-                    { value: 'quarantine', text:__('your_situation.some_income.4')}
+                    { value: 'retired', text:__('your_situation.some_income.2')}
                 ],
                 data.some_income,
                 __('form.your_situation.some_income'),
