--- a/views/base.njk
+++ b/views/base.njk
@@ -21,6 +21,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <title>{{ __('app.title') }}</title>
+        {% include "_includes/ga.njk %}
     </head>
     <body>
         <nav>
