Add checkboxes to blue call-out boxes
Also left align them as per michelle's mocks.

--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -2,8 +2,13 @@
 <div class="m-5 p-5 shadow-result">
     <h2 class="text-2xl font-bold mb-6" id="{{ id }}">{{ header }}</h2>
     {% for box in boxes %}
-        <div class="bg-blue-200 p-5 m-1 text-blue-900 text-center">
-            <p class="m-0"><strong>{{ box | safe }}</strong></p>
+        <div class="bg-blue-200 p-5 m-1 text-blue-800">
+            <p class="relative m-0 pl-8">
+                <svg class="w-6 h-6 mt-1 -ml-8 absolute fill-current" fill="none" aria-hidden="true" width="17" height="16" viewBox="0 0 17 16" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.25 8C16.25 6.625 15.875 5.3125 15.1875 4.125C14.5 2.9375 13.5625 2 12.375 1.3125C11.1875 0.625 9.875 0.25 8.5 0.25C7.09375 0.25 5.8125 0.625 4.625 1.3125C3.4375 2 2.46875 2.9375 1.78125 4.125C1.09375 5.3125 0.75 6.625 0.75 8C0.75 9.40625 1.09375 10.6875 1.78125 11.875C2.46875 13.0625 3.4375 14.0312 4.625 14.7188C5.8125 15.4062 7.09375 15.75 8.5 15.75C9.875 15.75 11.1875 15.4062 12.375 14.7188C13.5625 14.0312 14.5 13.0625 15.1875 11.875C15.875 10.6875 16.25 9.40625 16.25 8ZM7.59375 12.0938C7.5 12.2188 7.375 12.25 7.25 12.25C7.09375 12.25 6.96875 12.2188 6.90625 12.0938L3.65625 8.84375C3.53125 8.78125 3.5 8.65625 3.5 8.5C3.5 8.375 3.53125 8.25 3.65625 8.15625L4.34375 7.4375C4.4375 7.34375 4.5625 7.28125 4.6875 7.28125C4.8125 7.28125 4.9375 7.34375 5.0625 7.4375L7.25 9.625L11.9375 4.9375C12.0312 4.84375 12.1562 4.78125 12.2812 4.78125C12.4062 4.78125 12.5312 4.84375 12.6562 4.9375L13.3438 5.65625C13.4375 5.75 13.5 5.875 13.5 6C13.5 6.15625 13.4375 6.28125 13.3438 6.34375L7.59375 12.0938Z"/>
+                </svg>
+                <strong>{{ box | safe }}</strong>
+            </p>
         </div>
     {% endfor %}
     <div class="pb-5 mt-6">
