--- a/views/_includes/ga.njk
+++ b/views/_includes/ga.njk
@@ -11,7 +11,7 @@
     </script>
   {% endif %}
 
-  {% if getLocale() === 'en' %}
+  {% if getLocale() === 'fr' %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102484926-20"></script>
     <script>
