Changed under4999 to 4999_or_less Updated copy on gross income question (English and French) Added EI Regular result for some-income + retired and a test for it

--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -10,7 +10,7 @@
             {{ radioButtons(
                 'gross_income',
                 [
-                    { value: 'under4999', text:__('gross_income.1')},
+                    { value: '4999_or_less', text:__('gross_income.1')},
                     { value: '5k+', text:__('gross_income.2')}
                 ],
                 data.gross_income,
