update copy for benefits cards

--- a/views/benefits/ei_regular_cerb.njk
+++ b/views/benefits/ei_regular_cerb.njk
@@ -7,6 +7,7 @@
         link: __("ei_regular_and_cerb.link")
     },
     [
-        __("ei_regular_and_cerb.box1")
+        __("ei_regular_and_cerb.box1"),
+        __("ei_regular_and_cerb.box2")
     ]
 )}}
