--- a/views/500.njk
+++ b/views/500.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h1>{{ __('500') }}</h1>
-    <div>
+    <div data-gc-analytics-error="500">
         <p>{{ __('Internal server error') }}</p>
     </div>
 
