--- a/routes/question-lost-job/question-lost-job.njk
+++ b/routes/question-lost-job/question-lost-job.njk
@@ -4,7 +4,7 @@
 
     <h1>{{__('lost_job.title')}}</h1>
     <div>
-        <form method="post">
+        {% call form() %}
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
             {{ radioButtons('lost_job',
@@ -19,7 +19,7 @@
                 { required: true })
             }}
             {{ formButtons() }}
-        </form>
+        {% endcall %}
     </div>
 
 {% endblock %}
