--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -4,11 +4,10 @@
 
     <h1>{{__('no_income.title')}}</h1>
     <div>
-        <form method="post">
+        {% call form() %}
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             {{ radioButtons('no_income',
                 [
-                   
                     { value: 'lost-job-employer-closed', text:__('your_situation.no_income.1')},
                     { value: 'self-employed-closed', text:__('your_situation.no_income.2')},
                     { value: 'unpaid-leave-to-care', text:__('your_situation.no_income.3')},
@@ -23,7 +22,7 @@
                 { required: true })
             }}
             {{ formButtons() }}
-        </form>
+        {% endcall %}
     </div>
 
 {% endblock %}
