--- a/views/404.njk
+++ b/views/404.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h1>{{ __('404') }}</h1>
-    <div>
+    <div data-gc-analytics-error="404">
         <p>{{ __('Page not found') }}</p>
     </div>
 
