--- a/views/base.njk
+++ b/views/base.njk
@@ -21,6 +21,12 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <title>{{ __('app.title') }}</title>
+        <noscript>
+            {# hides the back button if js is not on. noscript tags are allowed in the header in html5 #}
+            <style type="text/css">
+                .back-button-container {display:none;}
+            </style>
+        </noscript>
     </head>
     <body>
         <nav>
