Default the backlink to display none and then through javascript, remove the class 'no-js' on it. Just to be sure we're not doing any wonky html

--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,4 +1,4 @@
-<div class="back-button-container">
+<div class="back-button-container no-js">
   <button aria-label="{{__('button.back')}}" id="backButton" class="back-button">
     <img src="/img/arrow-circle-left.svg" aria-hidden="true" /><span>{{__('button.back')}}</span>
   </button>
