--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -89,9 +89,14 @@ a.button-link {
 }
 
 .back-button-container {
+  &.no-js {
+    display: none;
+  }
+
   margin-bottom: $space-lg;
   //this so that if the button doesn't display, it doesn't affect the necessary margin for the header
   margin-top: -$space-lg;
+
 
   @include sm {
     margin-bottom: $space-xl;
