--- a/views/_includes/script.njk
+++ b/views/_includes/script.njk
@@ -10,6 +10,10 @@
         })
     }
 
+    var backLinkContainer = document.getElementsByClassName('back-button-container')[0];
+    
+    backLinkContainer.className = backLinkContainer.className.replace(/\bno-js\b/g, "");
+
     document.addEventListener('DOMContentLoaded', function () {
         document.getElementById('backButton') && document.getElementById('backButton').addEventListener('click', function() {
             window.history.go(-1);
