Add novalidate attr to forms
This is so the built in browser validation doesn't fire off and we can
use our built in validation

--- a/bin/route/[[sample]]/[[sample]].njk
+++ b/bin/route/[[sample]]/[[sample]].njk
@@ -9,7 +9,7 @@
             {{ __('[[sample]].intro') }}
         </p>
 
-        <form method="post">
+        <form novalidate method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             
             {{ textInput('form.firstname', 'form.firstname.desc') }}
