add role link to back button

--- a/views/_includes/back-link.njk
+++ b/views/_includes/back-link.njk
@@ -1,5 +1,5 @@
 <div class="back-button-container no-js">
-  <button aria-label="{{__('button.back')}}" id="backButton" class="back-button">
+  <button aria-label="{{__('button.back')}}" id="backButton" class="back-button" role=”link”>
     <img src="/img/arrow-circle-left.svg" aria-hidden="true" /><span>{{__('button.back')}}</span>
   </button>
 </div>
