--- a/views/_includes/phaseBanner.njk
+++ b/views/_includes/phaseBanner.njk
@@ -1,5 +1,5 @@
 <div class="phase-banner">
     <div>
-        <span>ALPHA</span><span>{{ __('phase.desc') }}</span>
+        <span><strong class="font-normal">ALPHA</strong><span class="visually-hidden" >{{ ' ' if locale === 'fr'}}: </span></span><span>{{ __('phase.desc') }}</span>
     </div>
 </div>
