--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -6,7 +6,7 @@
     <div class="flex flex-row">
         {% include "_includes/back-link.njk" %}
         <div class="inline -mt-12">
-            <a class="ml-6 py-3 button-link transparent" href="/clear"><img src="/img/times-circle.svg" aria-hidden="true" /><span>{{ __('start_over') }}</span></a>
+            <a class="ml-6 py-3 button-link transparent" href="/clear"><img src="/img/times-circle.svg" alt="" /><span>{{ __('start_over') }}</span></a>
         </div>
     </div>
 
