--- a/views/macros/buttons.njk
+++ b/views/macros/buttons.njk
@@ -3,7 +3,7 @@
         <div class="buttons--left next-button">
             <button class="py-3 px-4 border shadow" data-cy="next" type="submit">{{ __(submitButtonText) }}</button>
         </div>
-        <div class="buttons--right"><a class="py-3 px-4 button-link transparent full-width" href="{{ cancelUrl }}"><img src="/img/times-circle.svg" aria-hidden="true" /><span>{{ __('start_over') }}</span></a></div>
+        <div class="buttons--right"><a class="py-3 px-4 button-link transparent full-width" href="{{ cancelUrl }}"><img src="/img/times-circle.svg" alt="" /><span>{{ __('start_over') }}</span></a></div>
     </div>
 {% endmacro %}
 
