--- a/views/base.njk
+++ b/views/base.njk
@@ -20,7 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
         <link href="https://fonts.googleapis.com/css?family=Lato:700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
         <link rel="stylesheet" href="/dist/css/styles.css">
-        <title>{{ __('app.title') }}</title>
+        <title>{{ title }} — {{ __('app.title') }}</title>
     </head>
     <body>
         <nav>
