fix some single quote issues

--- a/routes/question-student-debt/question-student-debt.njk
+++ b/routes/question-student-debt/question-student-debt.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>{{ __("student_debt.title") }}</h1>
+    <h1>{{ __('student_debt.title') }}</h1>
     <div>
         <form novalidate method="post">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
