--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -4,6 +4,7 @@
 
     <h1>{{ __('gross_income.title') }}</h1>
     <div>
+        {% call form() %}
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
             {{ radioButtons(
