--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -22,6 +22,6 @@
     <div class="pb-5 mt-6">
         {{ preamble | safe}}
     </div>
-    <a href="{{ button.link }}" target="_blank" class="full-width font-semibold button-link py-6 px-5 border shadow"> {{ button.text }}</a>
+    <a href="{{ button.link }}" data-gc-analytics-customclick="ESDC|EDSC:{{id}}:true" target="_blank" class="full-width font-semibold button-link py-6 px-5 border shadow"> {{ button.text }}</a>
 </div>
 {% endmacro %}
