create feedback include and... include it

--- a/views/base.njk
+++ b/views/base.njk
@@ -46,6 +46,8 @@
                 {% endif %}
 
                 {% block content %}{% endblock %}
+
+                {% include "_includes/feedback.njk" %}
             </main>
             {% include "_includes/footer.njk" %}
         </div>
