Explicitly anonymizing IP address

--- a/views/_includes/ga.njk
+++ b/views/_includes/ga.njk
@@ -8,6 +8,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-102484926-19');
+      gtag('config', '<GA_MEASUREMENT_ID>', { 'anonymize_ip': true });
     </script>
   {% endif %}
 
@@ -19,6 +20,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-102484926-20');
+      gtag('config', '<GA_MEASUREMENT_ID>', { 'anonymize_ip': true });
     </script>
   {% endif %}
 {% endif %}
