--- a/views/base.njk
+++ b/views/base.njk
@@ -6,6 +6,7 @@
 {%- from 'buttons.njk' import formButtons as formButtons with context -%}
 {%- from 'input-file.njk' import fileInput as fileInput with context -%}
 {%- from 'benefit-result.njk' import benefitResult as benefitResult with context -%}
+{%- from 'benefit-result.njk' import blueLI as blueLI with context -%}
 {%- from 'form.njk' import form as form with context -%}
 
 <!DOCTYPE html>
