--- a/views/base.njk
+++ b/views/base.njk
@@ -7,6 +7,7 @@
 {%- from 'input-file.njk' import fileInput as fileInput with context -%}
 {%- from 'benefit-result.njk' import benefitResult as benefitResult with context -%}
 {%- from 'benefit-result.njk' import blueLI as blueLI with context -%}
+{%- from 'benefit-result.njk' import infoLink as infoLink with context -%}
 {%- from 'form.njk' import form as form with context -%}
 
 <!DOCTYPE html>
