--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -13,8 +13,8 @@
     <div class="pb-5 mt-6">
         {{ preamble | safe}}
     </div>
-    <a href="{{ button.link }}" data-gc-analytics-customclick="ESDC|EDSC:{{id}}:true" target="_blank" class="full-width font-semibold button-link py-6 px-5 border shadow"> {{ button.text }}</a>
 </div>
+{{ infoLink(id, button.link, button.text) }}
 {% endmacro %}
 
 {% macro blueLI(text) %}
@@ -30,4 +30,13 @@
 </div>
 </li>
 
+{% endmacro %}
+
+{% macro infoLink(id, url, text) %}
+<a href="{{ url }}" 
+    data-gc-analytics-customclick="ESDC|EDSC:{{id}}:true" 
+    target="_blank" 
+    class="full-width font-semibold button-link py-6 px-5 border shadow"> 
+    {{ text }}
+</a>
 {% endmacro %}
