Refactor Benefit Results
Refactor the following:
- ei_regular
- ei_sickness_cerb
- rrif
- gst_gredit
- mortgage_defferral
- student_loan

--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -11,12 +11,12 @@
 
   <div class="pb-5 mt-6">
 
-    <p><strong>The benefit can help if you:</strong></p>
+    <strong>The benefit can help if you:</strong>
     <ul class='list-disc list-outside'>
       <li>Care for a child under 18 years old</li>
     </ul>
 
-    <p><strong>Good to know:</strong></p>
+    <strong>Good to know:</strong>
     <ul class='list-disc list-outside'>
       <li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li>
       <li>
