--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -11,12 +11,12 @@
 
   <div class="pb-5 mt-6">
 
-    <p>Cette prestation peut vous aider si :</p>
+    <strong>Cette prestation peut vous aider si :</strong>
     <ul class='list-disc list-outside'>
       <li>vous avez la charge d’un enfant de moins de 18 ans. </li>
     </ul>
 
-    <p>Bon à savoir :</p>
+    <strong>Bon à savoir :</strong>
     <ul class='list-disc list-outside'>
       <li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li>
       <li>
