--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -10,7 +10,7 @@
 
   <div class="pb-5 mt-6">
 
-    <p>Good to know:</p>
+    <strong>Good to know:</strong>
     <ul class='list-disc list-outside'>
       <li>The bank will still charge interest</li>
       <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
