--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -10,7 +10,7 @@
 
   <div class="pb-5 mt-6">
 
-    <p>Bon à savoir :</p>
+    <strong>Bon à savoir :</strong>
     <ul class='list-disc list-outside'>
       <li>La banque chargera quand même de l’intérêt.</li>
       <li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li>
