--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -12,7 +12,7 @@
 
   <div class="pb-5 mt-6">
 
-    <p><strong>Cette prestation peut vous aider si : </strong></p>
+    <strong>Cette prestation peut vous aider si : </strong>
     <ul class='list-outside list-disc'>
       <li>vous avez été forcé de quitter votre emploi.</li>
       <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li>
@@ -23,7 +23,7 @@
       </li>
     </ul>
 
-    <p><strong>Bon à savoir :</strong></p>
+    <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
       <li>Offerte du 15 mars au 3 octobre 2020.</li>
       <li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li>
